--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New me</title>
+
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
+    <header class="banner-section" style="background-image: url(images/banner/banner1.png);">
+        <div class="banner-wrapper-box">
+            <div class="banner-content">
+                <h1 class="banner-tittle">All Thinks Are <br> Possible If You <br> believe</h1>
+                <p class="banner-desc">There are many variations of passages of Lorem Ipsum <br> available, but the majority have
+                    suffered alteration in some <br> form, by injected humour, or randomised words</p>
     
+                <a class="primary-btn" href="#">Contact Us</a>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section>
+
+        </section>
+    </main>
+
 </body>
+
 </html>
