improvement section added

--- a/index.html
+++ b/index.html
@@ -14,17 +14,50 @@
         <div class="banner-wrapper-box">
             <div class="banner-content">
                 <h1 class="banner-tittle">All Thinks Are <br> Possible If You <br> believe</h1>
-                <p class="banner-desc">There are many variations of passages of Lorem Ipsum <br> available, but the majority have
+                <p class="banner-desc">There are many variations of passages of Lorem Ipsum <br> available, but the
+                    majority have
                     suffered alteration in some <br> form, by injected humour, or randomised words</p>
-    
+
                 <a class="primary-btn" href="#">Contact Us</a>
             </div>
         </div>
     </header>
 
     <main>
-        <section>
+        <section class="improvement-section">
+            <div class="improvement-thumb">
+                <img src="images/person.png" alt="">
+            </div>
 
+            <div class="improvement-content">
+                <h3 class="impro-tittle">My failures of previous year</h3>
+                <p class="impro-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                    roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                    McClintock.</p>
+
+                <ul class="improvement-list">
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular belief, is not simply.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular belief.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular , is not simply.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular belief, is not simply.</li>
+                    <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> Contrary to popular simply.</li>
+                </ul>
+            </div>
         </section>
     </main>
 
