my plan sectin added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,55 @@
             </div>
         </section>
 
+        <section class="my-plan-section">
+            <h3 class="my-plan-section-tittle">My Plans</h3>
 
+            <div class="my-plans">
+                <div class="my-plan-wrapper">
+                    <div class="my-plan-thumb">
+                        <img src="images/icons/web.png" alt="">
+                    </div>
+
+                    <div class="my-plan-content">
+                        <h4 class="my-plan-tittle">Web Development</h4>
+                        <h6 class="my-plan-textg">I want to start</h6>
+                    </div>
+                </div>
+
+                <div class="my-plan-wrapper">
+                    <div class="my-plan-thumb">
+                        <img src="images/icons/js.png" alt="">
+                    </div>
+
+                    <div class="my-plan-content">
+                        <h4 class="my-plan-tittle">Javascript</h4>
+                        <h6 class="my-plan-textg">I want to learn</h6>
+                    </div>
+                </div>
+
+                <div class="my-plan-wrapper">
+                    <div class="my-plan-thumb">
+                        <img src="images/icons/smoke.png" alt="">
+                    </div>
+
+                    <div class="my-plan-content">
+                        <h4 class="my-plan-tittle">Smoking Habit</h4>
+                        <h6 class="my-plan-textg">I want to end</h6>
+                    </div>
+                </div>
+
+                <div class="my-plan-wrapper">
+                    <div class="my-plan-thumb">
+                        <img src="images/icons/ecom.png" alt="">
+                    </div>
+
+                    <div class="my-plan-content">
+                        <h4 class="my-plan-tittle">ecommerce</h4>
+                        <h6 class="my-plan-textg">I want to develop</h6>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
