motivated section added

--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
                 </div>
             </div>
         </section>
+
+        <section class="motivated-section" style="background-image: url(images/watch.png);">
+           
+            <div class="motivated-content-box">
+                <h3 class="motivated-text">Awlays keep a positive mindset</h3>
+
+                <a class="motivated-btn" href="#">Call Now</a>
+    
+            </div>
+            <div class="bg-gradian-shadow">
+                <img src="images/gradient2.png" alt="">
+            </div>
+        </section>
     </main>
 
 </body>
